# rpdf

./: .gitignore  .tool-versions  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  package.json  pnpm-lock.yaml
.ai-tests/: README.md  parse-new-pdf.prompt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docs-check.yml
crates/: CLAUDE.md
crates/rpdf-cli/: CLAUDE.md  Cargo.toml
crates/rpdf-cli/src/: main.rs
crates/rpdf-cli/src/commands/: dump.rs  dump_pages.rs  info.rs  mod.rs  render.rs
crates/rpdf-cli/src/commands/edit/: delete.rs  extract.rs  merge.rs  mod.rs  rotate.rs  split.rs
crates/rpdf-cli/tests/: cli_tests.rs  render_tests.rs
crates/rpdf-core/: CLAUDE.md  Cargo.toml
crates/rpdf-edit/: Cargo.toml
crates/rpdf-parser/: CLAUDE.md  Cargo.toml
crates/rpdf-parser/examples/: scan_content_stream.rs  scan_page_count.rs
crates/rpdf-parser/src/: content_stream.rs  document.rs  eof.rs  error.rs  header.rs  lib.rs  object_parser.rs  object_stream.rs  objects.rs  startxref.rs  trailer.rs  xref.rs  xref_stream.rs
crates/rpdf-parser/tests/: lib.rs
crates/rpdf-parser/tests/parser/: content_stream_tests.rs  document_tests.rs  eof_tests.rs  fuzz_tests.rs  header_tests.rs  integration_tests.rs  mod.rs  objects_tests.rs  startxref_tests.rs  trailer_tests.rs  xref_tests.rs
crates/rpdf-parser/tests/regression/: mod.rs
crates/rpdf-parser/tests/regression/snapshots/: lib__regression__b1_broken_missing_trailer.snap  lib__regression__b2_broken_bad_xref_offset.snap  lib__regression__m1_multilang_french.snap  lib__regression__m2_multilang_german.snap  lib__regression__m3_multilang_arabic.snap  lib__regression__m4_multilang_korean.snap  lib__regression__n1_nonstandard_helloworld_bad.snap  lib__regression__n2_nonstandard_bad_page_labels.snap  lib__regression__s1_xref_stream_doc_13_pages.snap  lib__regression__s2_xref_stream_extract_link.snap  lib__regression__s3_xref_stream_form_two_pages.snap  lib__regression__s4_xref_stream_zapfdingbats.snap  lib__regression__s5_xref_stream_irs_f1040nr.snap  lib__regression__s6_xref_stream_irs_f1040es.snap  lib__regression__s7_xref_stream_irs_f1120.snap  lib__regression__s8_xref_stream_irs_f941.snap  lib__regression__t1_trad_xref_basicapi.snap  lib__regression__t2_trad_xref_tracemonkey.snap  lib__regression__t3_trad_xref_canvas.snap  lib__regression__t4_trad_xref_cmyk_jpeg.snap  lib__regression__t5_trad_xref_attachment.snap  lib__regression__t6_trad_xref_find_all.snap  lib__regression__t7_trad_xref_issue1155r.snap  lib__regression__t8_trad_xref_issue1293r.snap  lib__regression__x1_special_acroform_calc.snap  lib__regression__x2_special_irs_f4868.snap  lib__regression__x3_special_irs_f1099msc.snap  lib__regression__x4_special_unicode_en_cidfont.snap
crates/rpdf-render/: CLAUDE.md  Cargo.toml
crates/rpdf-render/src/: lib.rs
crates/rpdf-render/tests/: image_regression.rs  render_tests.rs  snapshot_utils.rs
crates/rpdf-serializer/: Cargo.toml
crates/rpdf-serializer/src/: error.rs  lib.rs  serialize.rs  types.rs
crates/rpdf-serializer/tests/: serialize_tests.rs
crates/rpdf-svg/: Cargo.toml
crates/rpdf-wasm/: Cargo.toml
crates/rpdf-wasm/src/: lib.rs
docs/: README.md  ai-metrics.md  dependency-map.md  review-checklist.md
docs/decisions/: ADR-001-crate-workspace-structure.md  ADR-002-pdfium-render-dynamic-loading.md  ADR-003-parser-no-lopdf.md  ADR-004-wasm-rendering-strategy.md
docs/playbooks/: ci-failure-runbook.md  debug-parse-failure.md
examples/: README.md
mydocs/: README.md
mydocs/feedback/: README.md  task2-pr-review.md  template-code-review.md  template-user-observation.md
mydocs/manual/: architecture.md  dev-tools.md  hyper-waterfall.md  onboarding.md
mydocs/orders/: 20260424.md
mydocs/plans/: task1-project-setup.md  task10-regression-infrastructure.md  v0.3-editing.md  (+33 more)
npm/: README.md
samples/: README.md
scripts/: CLAUDE.md  fetch-pdfium.sh  fetch-samples.sh  make-corrupted-samples.py  rename-wasm-package.sh
tests/: README.md
(+79 files in other folders)
