[workspace]
resolver = "2"
members = ["crates/rpdf-cli",
    "crates/rpdf-core", "crates/rpdf-parser",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
authors = ["KwonCheulJin"]
license = "MIT"
repository = "https://github.com/KwonCheulJin/rpdf"

[workspace.dependencies]
rpdf-core = { path = "crates/rpdf-core" }
rpdf-parser = { path = "crates/rpdf-parser" }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
flate2 = "1.1"
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
