[package]
name = "rpdf-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rpdf"
path = "src/main.rs"

[dependencies]
rpdf-core.workspace = true
rpdf-parser.workspace = true
rpdf-render.workspace = true
rpdf-svg.workspace = true
rpdf-edit.workspace = true
rpdf-serializer.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest.workspace = true
rpdf-parser.workspace = true
serde_json.workspace = true
tempfile.workspace = true
