[package]
name = "rpdf-parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rpdf-core.workspace = true
thiserror.workspace = true
flate2.workspace = true

[dev-dependencies]
flate2.workspace = true
proptest.workspace = true
insta.workspace = true
serde.workspace = true

[features]
samples-large = []
